Fix the position of the recorder buttons in chrome
Fix the position of the tape recorder buttons that were overlapped in
chrome.

--- a/public/css/tapeRecorder.css
+++ b/public/css/tapeRecorder.css
@@ -54,6 +54,11 @@
   -webkit-transform: rotateY(35deg) translateZ(77px);
 }
 
+#buttons {
+  position: relative;
+  top: 15%;
+}
+
 .button {
   border: 1px solid gray;
   width: 70%; 
@@ -64,7 +69,6 @@
   left: 15%;
   cursor: pointer;
   box-shadow: -2px 2px 1px #222222;
-  top: 15%;
 }
 
 .pressed {
